<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/icon_nav_home"
        />
    <item
        android:id="@+id/bottom_nav_explore"
        android:title="@string/nav_explore"
        android:icon="@drawable/icon_nav_explore"
        />
    <item
        android:id="@+id/bottom_nav_share"
        android:title="@string/nav_share"
        android:icon="@drawable/icon_nav_share"
        />
    <item
        android:id="@+id/bottom_nav_notifications"
        android:title="@string/nav_notifications"
        android:icon="@drawable/icon_nav_notifications"
        />
    <item
        android:id="@+id/bottom_nav_me"
        android:title="@string/nav_me"
        android:icon="@drawable/icon_nav_me"
        />

</menu>